next batch of removed LinkedList usages